After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 789615 - "AGPL-3.0+" software is marked as proprietary ("AGPL-3.0" is not)
"AGPL-3.0+" software is marked as proprietary ("AGPL-3.0" is not)
Status: RESOLVED FIXED
Product: gnome-software
Classification: Applications
Component: General
3.26.x
Other Linux
: Normal normal
: ---
Assigned To: GNOME Software maintainer(s)
GNOME Software maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2017-10-29 12:18 UTC by Julian Sparber
Modified: 2018-03-27 13:58 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Julian Sparber 2017-10-29 12:18:59 UTC
Gnome software shows Proprietary as license for my project, which is licensed under AGPL-3.0+. For now I changed the license to AGPL-3.0 in the appdata file to solve the issue.

My System is Archlinux.
The appdata file of my project is:
https://github.com/frac-tion/teleport/blob/master/data/com.frac_tion.teleport.appdata.xml.in
Comment 1 Richard Hughes 2017-12-05 11:31:46 UTC
commit 3379c6dd7496346326b528b6e3717f5f9941ecb7 (HEAD -> master)
Author: Richard Hughes <richard@hughsie.com>
Date:   Tue Dec 5 11:30:52 2017 +0000

    Ignore the 'and later' part of the SPDX ID when working out if it is 'free'
    
    Fixes: https://bugzilla.gnome.org/show_bug.cgi?id=789615

:100644 100644 bbf7773f... ed748767... M        lib/gs-app.c
Comment 2 Luca Weiss 2018-03-27 13:58:37 UTC
I have a similar issue with gnome-software 3.28.0-1 and the SPDX identifier GPL-3.0-or-later which displays as "Proprietary" in gnome software.