Ignore the 'and later' part of the SPDX ID when working out if it is 'free'

Fixes: https://bugzilla.gnome.org/show_bug.cgi?id=789615